# RAG-Program-One

./: .gitignore  README.md  start.sh
backend/: .env.example  Label.txt  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/scripts/: batch_ingest_t1_t2.py
backend/src/: __init__.py
backend/src/agents/: action_agent.py  base.py  intent_agent.py  planning_agent.py  query_expansion_agent.py  reasoning_agent.py  recall_agent.py  report_agent.py  rerank_agent.py  vision_judge_agent.py
backend/src/batch_tasks/: __init__.py  archive_task.py  duplicate_task.py  ocr_filter_task.py  statistics_task.py  tagging_task.py  task_service.py
backend/src/caption/: __init__.py  parser.py  qwen_vl_captioner.py  schema.py
backend/src/config/: settings.py
backend/src/database/: models.py  session.py
backend/src/embeddings/: base.py  siglip_embedder.py  text_embedder.py
backend/src/evaluation/: datasets.py  explanation_eval.py  metrics.py  retrieval_eval.py
backend/src/graph/: batch_graph.py  nodes.py  query_graph.py  state.py
backend/src/ingestion/: __init__.py  duplicate_detector.py  loader.py  pipeline.py  preprocessing.py  quality_detector.py
backend/src/llm/: client.py
backend/src/models/: dto.py  enums.py  schemas.py
backend/src/prompts/: batch_action.yaml  intent.yaml  loader.py  query_expansion.yaml  reasoning.yaml  vision_analysis.yaml
backend/src/retrieval/: caption_retriever.py  explain.py  hybrid_retriever.py  metadata_retriever.py  reranker.py  (+1 more)
(+41 files in other folders)
