[project]
name = "agentic-image-rag"
version = "0.1.0"
description = "LangGraph based multimodal Agentic RAG image knowledge base."
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "minio>=7.2.0",
    "pillow>=10.3.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.10.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
ml = [
    "pillow>=10.3.0",
    "torch>=2.3.0",
    "transformers>=4.43.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

